tests/ui/nll/match-guards-partially-borrow.stderr
error[E0510]: cannot assign `q` in match guard
  --> $DIR/match-guards-partially-borrow.rs:99:13
   |
LL |     match q {
   |           - value is immutable in match guard
...
LL |             q = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot assign `q` in match guard
  --> $DIR/match-guards-partially-borrow.rs:110:13
   |
LL |     match q {
   |           - value is immutable in match guard
...
LL |             q = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot assign `r` in match guard
  --> $DIR/match-guards-partially-borrow.rs:122:13
   |
LL |     match r {
   |           - value is immutable in match guard
...
LL |             r = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot assign `r` in match guard
  --> $DIR/match-guards-partially-borrow.rs:134:13
   |
LL |     match r {
   |           - value is immutable in match guard
...
LL |             r = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot assign `t` in match guard
  --> $DIR/match-guards-partially-borrow.rs:171:13
   |
LL |     match t {
   |           - value is immutable in match guard
...
LL |             t = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot assign `t` in match guard
  --> $DIR/match-guards-partially-borrow.rs:182:13
   |
LL |     match t {
   |           - value is immutable in match guard
...
LL |             t = true;
   |             ^^^^^^^^ cannot assign

error[E0510]: cannot mutably borrow `x.0` in match guard
  --> $DIR/match-guards-partially-borrow.rs:196:22
   |
LL |     match x {
   |           - value is immutable in match guard
...
LL |                 Some(ref mut r) => *r = None,
   |                      ^^^^^^^^^ cannot mutably borrow

error[E0510]: cannot mutably borrow `x.0` in match guard
  --> $DIR/match-guards-partially-borrow.rs:212:22
   |
LL |     match x {
   |           - value is immutable in match guard
...
LL |                 Some(ref mut r) => *r = None,
   |                      ^^^^^^^^^ cannot mutably borrow

error[E0506]: cannot assign to `t` because it is borrowed
  --> $DIR/match-guards-partially-borrow.rs:224:13
   |
LL |         s if {
   |         - `t` is borrowed here
LL |             t = !t;
   |             ^^^^^^ `t` is assigned to here but it was already borrowed
LL |             false
LL |         } => (), // What value should `s` have in the arm?
   |         - borrow later used here

error[E0506]: cannot assign to `t` because it is borrowed
  --> $DIR/match-guards-partially-borrow.rs:234:13
   |
LL |         s if let Some(()) = {
   |         - `t` is borrowed here
LL |             t = !t;
   |             ^^^^^^ `t` is assigned to here but it was already borrowed
LL |             None
LL |         } => (), // What value should `s` have in the arm?
   |         - borrow later used here

error[E0510]: cannot assign `y` in match guard
  --> $DIR/match-guards-partially-borrow.rs:245:13
   |
LL |     match *y {
   |           -- value is immutable in match guard
...
LL |             y = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `y` in match guard
  --> $DIR/match-guards-partially-borrow.rs:256:13
   |
LL |     match *y {
   |           -- value is immutable in match guard
...
LL |             y = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `z` in match guard
  --> $DIR/match-guards-partially-borrow.rs:267:13
   |
LL |     match z {
   |           - value is immutable in match guard
...
LL |             z = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `z` in match guard
  --> $DIR/match-guards-partially-borrow.rs:278:13
   |
LL |     match z {
   |           - value is immutable in match guard
...
LL |             z = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `a` in match guard
  --> $DIR/match-guards-partially-borrow.rs:290:13
   |
LL |     match a {
   |           - value is immutable in match guard
...
LL |             a = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `a` in match guard
  --> $DIR/match-guards-partially-borrow.rs:302:13
   |
LL |     match a {
   |           - value is immutable in match guard
...
LL |             a = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `b` in match guard
  --> $DIR/match-guards-partially-borrow.rs:313:13
   |
LL |     match b {
   |           - value is immutable in match guard
...
LL |             b = &true;
   |             ^^^^^^^^^ cannot assign

error[E0510]: cannot assign `b` in match guard
  --> $DIR/match-guards-partially-borrow.rs:324:13
   |
LL |     match b {
   |           - value is immutable in match guard
...
LL |             b = &true;
   |             ^^^^^^^^^ cannot assign

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0506, E0510.
For more information about an error, try `rustc --explain E0506`.
